# braw

./: CMakeLists.txt  LICENSE  README.md
bind/: braw_bind.hpp  export.hpp  memory.hpp  stack.hpp  type_info.hpp  utils.hpp
src/: braw_context.cpp  braw_context.hpp  cursor.hpp  function_context.hpp  main.cpp  memory.hpp  messages.hpp  native_functions.hpp  rules.hpp  stack.hpp  token.hpp  type_info.hpp  utils.hpp
src/ast-printer/: ast_printer.cpp  ast_printer.hpp
src/astprinter/: ast_printer.cpp  ast_printer.hpp
src/codegen/: instruction.hpp  operand.hpp
src/codegen/x86-64/: address.hpp  code_generator.cpp  code_generator.hpp  emitter.cpp  emitter.hpp  file.hpp  immediate.hpp  instruction.hpp  integer.hpp  label.hpp  olabel.hpp  opcodes.hpp  register.hpp
src/compiler/: compile_binary.cpp  compile_call.cpp  compile_function.cpp  compile_instruction.cpp  compile_return.cpp  compiler.cpp  compiler.hpp
src/execution-tree/builder/: build_address.cpp  build_arrow.cpp  build_assignment.cpp  build_binary_operator.cpp  build_bind.cpp  build_cast.cpp  build_dereference.cpp  build_dot.cpp  build_evaluatable.cpp  build_file.cpp  build_function_call.cpp  build_function_definition.cpp  build_if.cpp  build_instruction.cpp  build_literal.cpp  build_return.cpp  build_scope.cpp  build_unary_operator.cpp  build_variable_access.cpp  build_variable_declaration.cpp  build_while.cpp  et_builder.hpp
src/execution-tree/nodes/: address.hpp  arrow.hpp  assignment.hpp  binary_operator.hpp  cast.hpp  dereference.hpp  dot.hpp  evaluatable.hpp  file.hpp  function_call.hpp  function_definition.hpp  function_instruction.hpp  if.hpp  literal.cpp  literal.hpp  native_function.hpp  native_function_call.hpp  node.hpp  (+5 more)
src/interpreter/: execute_scope.cpp  interpreter.hpp  invoke_function.cpp  visit_address.cpp  visit_arrow.cpp  visit_assignment.cpp  visit_binary_operator.cpp  visit_cast.cpp  visit_dereference.cpp  visit_dot.cpp  visit_function_call.cpp  visit_if.cpp  visit_literal.cpp  visit_native_function_call.cpp  visit_return.cpp  visit_variable_access.cpp  visit_variable_declaration.cpp  visit_while.cpp
src/ir/: address.hpp  file.hpp  function.hpp  instruction.hpp  label.hpp  operand.hpp  operator.hpp  register.hpp  value.hpp
src/lexer/: lexer.cpp  lexer.hpp
src/parser/: identifier.hpp  messages.cpp  messages.hpp  native_functions.hpp  parser.cpp  parser.hpp  rules.hpp
src/parsernew/: identifier.hpp  parser.cpp  parser.hpp  rules.hpp
src/semantic-analyzer/: analyze_binary_operator.cpp  analyze_bind.cpp  analyze_file.cpp  analyze_function_call.cpp  analyze_function_definition.cpp  analyze_if.cpp  analyze_literal.cpp  analyze_return.cpp  analyze_scope.cpp  analyze_struct.cpp  analyze_unary_operator.cpp  analyze_variable_access.cpp  analyze_variable_declaration.cpp  analyze_while.cpp  semantic_analyzer.cpp  semantic_analyzer.hpp
tests/double/: double.braw  double.cpp
tests/float/: float.braw  float.cpp
tests/integer/: integer.braw
tests/integer-ptr/: integer-ptr.cpp
tests/pointer/: pointer.braw  pointer.cpp
(+114 files in other folders)
